--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,20 @@
-
+<!doctype html>
+<html>
+<head>
+<title>Qingdao Atractions!</title>
+</head>
+<body>
+	<h1>4th May Square</h1>
+	<div>
+		May Fourth Square (Chinese: 五四广场; pinyin: wǔsì guǎngchǎng) also known as Wu Si Guang Chang, is a large (10 hectares) public square in Qingdao's central business district. It is located between the new municipal government building and Fushan Bay and is composed of Shizhengting Square, the central square and the coastal park.
+	</div>
+	<h2>Laoshan Mountain</h2>
+	<div>
+		Laoshan Mountain, also known as Mount Lao or Laoshan National Forest Park, is situated at the seashore of Yellow Sea, in the east of Qingdao city, with a total area of 446 km².
+	</div>
+	<h3>Shilaoren Beach</h3>
+	<div>
+		Shilaoren Bathing Beach is one of the largest beaches in this city and perhaps the most impressive tourist beach. This bathing beach has a length of more than 3 kilometers. This beach was named after the prominent rock outcropping just off Shilaoren Peninsula, shaped like an old man extending into the sea, measuring 17 meters in height. Shilaoren rock outcropping is a typical kind of sea stacks landscape along this coast.
+	</div>
+</body>
+</html>
