module2 index.html

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -33,12 +33,21 @@
   .col-md-3 {
     width: 100%;} }
 
-#head1 {margin-bottom: 10px;
-font-size: 120%;}
-#head2 {margin-bottom: 10px;
-font-size: 120%;}
-#head3 {margin-bottom: 10px;
-font-size: 120%;}
+#head1 {  font-size: 120%;
+position: relative;
+float: right;
+border: 1px solid black;
+background-color: white;}
+#head2 {font-size: 120%;
+position: relative;
+float: right;
+border: 1px solid black;
+background-color: white;}
+#head3 {font-size: 120%;
+position: relative;
+float: right;
+border: 1px solid black;
+background-color: white;}
 
 #p1 {background-color: ivory;
   padding: 10px;
@@ -69,15 +78,15 @@ font-size: 120%;}
   <div class="row">
 <center><h1>Qingdao Atractions</h1></center>
 	<div id="p1" class="col-lg-3 col-md-6">
-	<p> <center id=head1>4th May Square</center>
+	<p> <div id=head1>4th May Square</div>
 		May Fourth Square (Chinese: 五四广场; pinyin: wǔsì guǎngchǎng) also known as Wu Si Guang Chang, is a large (10 hectares) public square in Qingdao's central business district. It is located between the new municipal government building and Fushan Bay and is composed of Shizhengting Square, the central square and the coastal park.
 	</p></div>
 	<div id="p2" class="col-lg-3 col-md-6">
-	<p> <center id=head2>Laoshan Mountain</center>
+	<p> <div id=head2>Laoshan Mountain</div>
 		Laoshan Mountain, also known as Mount Lao or Laoshan National Forest Park, is situated at the seashore of Yellow Sea, in the east of Qingdao city, with a total area of 446 km².
 	</p></div>
 	<div id="p3" class="col-lg-3 col-md-12">
-	<p> <center id=head3>Shilaoren Beach</center>
+	<p> <div id=head3>Shilaoren Beach</div>
 		Shilaoren Bathing Beach is one of the largest beaches in this city and perhaps the most impressive tourist beach. This bathing beach has a length of more than 3 kilometers. This beach was named after the prominent rock outcropping just off Shilaoren Peninsula, shaped like an old man extending into the sea, measuring 17 meters in height. Shilaoren rock outcropping is a typical kind of sea stacks landscape along this coast.
 	</p></div>
 </div>
